# fuse

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  pr-label-check.yml
app/: config.py  main.py
app/dependencies/: auth.py
app/routers/v1/: __init__.py  scraper.py  test.py
app/services/: github_jobs_scraper.py
scripts/: freeze_and_add.sh
