[project]
name = "fuse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = ["pre-commit"]

[tool.black]
line-length = 88
